--- a/package.json
+++ b/package.json
@@ -4,19 +4,30 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "framer-motion": "^10.12.4",
+    "@rollup/plugin-terser": "^0.4.3",
+    "@svgr/core": "^8.0.0",
+    "@svgr/rollup": "^8.0.1",
+    "@svgr/webpack": "^8.0.1",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "css-select": "^5.1.0",
+    "framer-motion": "^10.15.0",
+    "har-validator": "^5.1.5",
+    "nth-check": "^2.1.1",
     "react": "^18.2.0",
     "react-animation-on-scroll": "^5.1.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
+    "request": "^2.88.2",
     "slick-carousel": "^1.8.1",
-    "web-vitals": "^2.1.4"
+    "urix": "^0.1.0",
+    "uuid": "^9.0.0",
+    "w3c-hr-time": "^1.0.2",
+    "web-vitals": "^3.4.0"
   },
   "scripts": {
     "start": " PORT=8080 react-scripts --openssl-legacy-provider start",
