--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-animation-on-scroll": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
     "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
     "request": "^2.88.2",
@@ -30,7 +30,7 @@
     "web-vitals": "^3.4.0"
   },
   "scripts": {
-    "start": " PORT=8080 react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
