--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
-    "react-scripts": "^2.1.8",
-    "react-scroll": "^1.8.9"
+    "react-scripts": "^5.0.1",
+    "react-scroll": "^1.8.9",
+    "nth-check": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
