--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "nth-check": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
-    "react-scroll": "^1.8.9",
-    "nth-check": "^1.0.2"
+    "react-scroll": "^1.8.9"
   },
   "scripts": {
     "start": "react-scripts start",
